deploy/database.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mssql
  template:
    metadata:
      labels:
        app: mssql
    spec:
      terminationGracePeriodSeconds: 30
      hostname: mssqlinst
      securityContext:
        fsGroup: 10001
      containers:
      - name: mssql
        image: mcr.microsoft.com/mssql/server:2019-latest
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - containerPort: 1433
        volumeMounts:
        - name: mssqldb
          mountPath: /var/opt/mssql/data
      volumes:
      - name: mssqldb
        persistentVolumeClaim:
          claimName: mssql-data
---
apiVersion: v1
kind: Service
metadata:
  name: mssql-srv
spec:
 selector:
   app: mssql
 ports:
  - protocol: TCP
    port: 1433
    targetPort: 1433
 type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: mssql-loadbalancer
spec:
 selector:
   app: mssql
 ports:
  - protocol: TCP
    port: 1433
    targetPort: 1433
 type: LoadBalancer
