deploy/deploy-client.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular-client-deployment
spec:
  selector:
    matchLabels:
      app: angular-client
  template:
    metadata:
      labels:
        app: angular-client
    spec:
      containers:
      - name: angular-client
        image: kveremeyeva/musiccatalog-angularclient:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: angular-client-service
  labels:
    app: angular-client
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: angular-client
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: client-ingress
    annotations:
      kubernetes.io/ingress.class: nginx
spec:
    rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: angular-client
              port:
                number: 80
