deploy/deploy-identity-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity-api-deployment
  labels:
    app: identity-api-pod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: identity-api-pod
  template:
    metadata:
      labels:
        app: identity-api-pod
    spec:
      containers:
      - name: identity-api
        image: kveremeyeva/musiccatalog-identityapi:latest
        imagePullPolicy: IfNotPresent
        readinessProbe:
          tcpSocket:
            port: 5000
          initialDelaySeconds: 300
          periodSeconds: 30
        resources:
          limits:
            memory: "256Mi"
            cpu: "200m"
        ports:
        - containerPort: 5000
          protocol: TCP
        command: ["/bin/sh", "-ec", "sleep 1000"]
---
apiVersion: v1
kind: Service
metadata:
  name: identity-api-service
  labels:
    app: identity-api-pod
spec:
  selector:
    app: identity-api-pod
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: identity-api-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: /identity-api
        pathType: Prefix
        backend:
          service:
            name: identity-api-service
            port:
              number: 5000
