deploy/deploy-web-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-api-deployment
  labels:
    app: web-api
spec:
  replicas: 1
  selector:
    matchLabels:
      service: musiccatalog.webapi
  template:
    metadata:
      labels:
        app: web-api
        service: musiccatalog.webapi
    spec:
      containers:
        - name: web-api
          image: kveremeyeva/musiccatalog-webapi:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: web-api-service
  labels:
    app: web-api
    service: musiccatalog.webapi
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    service: musiccatalog.webapi
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: web-api-ingress
spec:
    rules:
    - host: localhost
    - http:
        paths:
        - path: /web-api
          pathType: Prefix
          backend:
            service:
              name: web-api-service
              port:
                number: 80
