deploy/ingress-srv.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
  - host: acme.com
    http:
      paths:
      - path: /api/(user|admin)
        pathType: Prefix
        backend:
          service:
            name: identity-api-service
            port:
              number: 80
      - path: /api/(albums|genres|performers|songs)
        pathType: Prefix
        backend:
          service:
            name: web-api-service
            port:
              number: 80
